--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\scripts\CountdownTimer.cs" />
      <Compile Include="Assets\scripts\Health.cs" />
      <Compile Include="Assets\scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\scripts\SoundManagerScript.cs" />
      <Compile Include="Assets\scripts\SpawnBrick.cs" />
      <Compile Include="Assets\scripts\brickHits.cs" />
      <Compile Include="Assets\scripts\cameracontrol.cs" />
