--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\garbage.cs" />
      <Compile Include="Assets\move.cs" />
      <Compile Include="Assets\scripts\BrickMovement.cs" />
      <Compile Include="Assets\scripts\CountdownTimer.cs" />
@@ -70,6 +71,7 @@
      <Compile Include="Assets\scripts\entertainControl.cs" />
      <Compile Include="Assets\scripts\healthControl.cs" />
      <Compile Include="Assets\scripts\staminaControl.cs" />
+     <Compile Include="Assets\trap.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
