--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -55,8 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\garbage.cs" />
-     <Compile Include="Assets\move.cs" />
+     <Compile Include="Assets\moveplatforms.cs" />
      <Compile Include="Assets\scripts\BrickMovement.cs" />
      <Compile Include="Assets\scripts\CountdownTimer.cs" />
      <Compile Include="Assets\scripts\Health.cs" />
@@ -73,9 +72,10 @@
      <Compile Include="Assets\scripts\different ending\gosuccessend.cs" />
      <Compile Include="Assets\scripts\enterDialog.cs" />
      <Compile Include="Assets\scripts\entertainControl.cs" />
+     <Compile Include="Assets\scripts\garbage.cs" />
      <Compile Include="Assets\scripts\healthControl.cs" />
      <Compile Include="Assets\scripts\staminaControl.cs" />
-     <Compile Include="Assets\trap.cs" />
+     <Compile Include="Assets\scripts\trap.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
