--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\goentertainment.cs" />
      <Compile Include="Assets\moveplatforms.cs" />
      <Compile Include="Assets\scripts\BrickMovement.cs" />
      <Compile Include="Assets\scripts\CountdownTimer.cs" />
