--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\garbage.cs" />
+     <Compile Include="Assets\goentertainment.cs" />
      <Compile Include="Assets\move.cs" />
      <Compile Include="Assets\scripts\BrickMovement.cs" />
      <Compile Include="Assets\scripts\CountdownTimer.cs" />
