--- a/zoo/Assembly-CSharp.csproj
+++ b/zoo/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
      <Compile Include="Assets\scripts\SoundManagerScript.cs" />
      <Compile Include="Assets\scripts\SpawnBrick.cs" />
      <Compile Include="Assets\scripts\SuccessPlayerMove.cs" />
+     <Compile Include="Assets\scripts\bgsound.cs" />
      <Compile Include="Assets\scripts\brickHits.cs" />
      <Compile Include="Assets\scripts\cameracontrol.cs" />
      <Compile Include="Assets\scripts\changetext.cs" />
